--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,9 @@
     <div class="col-md-6 m-auto">
       <div class="card card-body">
         <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
-        <%- include('./partials/messeges') %>
+        <% if (typeof errors !== 'undefined') { %>
+        <%= errors %>
+        <% } %>
         <form action="/users/login" method="POST">
           <div class="form-group">
             <label for="email">Email</label>
